nifi-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nifi-auth
  name: nifi-auth
spec:
  ports:
    - name: "9556"
      port: 9556
      targetPort: 8443
  selector:
    io.kompose.service: nifi-auth
status:
  loadBalancer: {}
